testData/highlighting/check_test.go
package check

import "fmt"

func init() {
  fmt.<error descr="Unresolved reference 'TestStringer'">TestStringer</error>(nil)
}